[package]
name = "etherscan"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
once_cell = "1.9.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.75"
serde_with = { version = "1.11.0", features = ["chrono"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["macros"]}