[package]
name = "etherscan"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4"
once_cell = "1.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = { version = "1.13", features = ["chrono"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros"]}