[package]
name = "etherscan"
version = "0.3.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
ethabi = "17.0"
once_cell = "1.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = { version = "1.13", features = ["chrono"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros"]}